--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang='en'>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <title>Umesh</title>
+</head>
+
+<body>
+  <h1>Hello, Code School!</h1>
+  <ul>
+    <li>Introduction of Git
+    </li>
+    <li>
+      Git Commonds
+    </li>
+  </ul>
+</body>
+
 </html>
